Se agrega alert cuando no se encuentra sitio en DF

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/src/assets/antena.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- CDN -->
+  <!-- Conexión Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif&display=swap" rel="stylesheet">
+  <!-- Letra nombre sitio -->
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif+Caption&display=swap" rel="stylesheet">
   <title>Planillas BOIR Web</title>
 </head>
 
